display the 'about' button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
         </div>
         <!-- Le boutton AboutWork change de destination
-            ET de contenu selon le slider active.
+            ET de contenu selon le slider active.-->
         <a id="AboutWork" href="pendus.html">About This Work</a>
         <!-- end button About This Work -->
         <!-- start slider -->
